@@ -1943,7 +1943,8 @@ of the given mob in their prominent rivalrous clan.</td>
           </tr>
           <tr>
             <td>CLANQUALIFIES([code])</td>
-            <td>Returns a description of the qualifications for clan [code]</td>
+            <td>Returns a description of the qualifications for clan
+[code]</td>
           </tr>
           <tr>
             <td>CLANDATA([clan
@@ -2670,6 +2671,27 @@ well as the following web sites
 which discuss the usage and syntax of the Javascript language itself: <a
  href="http://www.mozilla.org/js/">http://www.mozilla.org/js/</a>
 and <a href="http://www.mozilla.org/rhino/">http://www.mozilla.org/rhino/</a>.</p>
+      <p>Even though the languages are very different, you will still
+be able to use all of the MOBPROG commands, functions, and even the
+special string versions of the functions described in the green table
+above. &nbsp;When using a command in JavaScript, make sure to always
+surround the parameters to the command with parenthesis, and make sure
+all parameters are separated by commas instead of spaces. &nbsp;For
+example, in MOBPROG, you might write:<br />
+      </p>
+      <pre>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; if IsPC ($n)<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; MPEcho "The ground beneath $%InArea()% shakes!"<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; endif
+      </pre>
+      <p>However, in Javascript, the exact same effect is generated by
+writing:<br />
+      </p>
+      <pre>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; if( ISPC("$n") )<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; {<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; MPECHO("The ground beneath " + INAREA$() + " shakes!");<br />&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; }</pre>
+      <p>Notice that, while case is not sensitive for command or
+function names&nbsp;in MOBPROG, in JavaScript, all MOBPROG commands and
+functions are in uppercase only. &nbsp;Also notice that, when calling a
+string function from the green table above, the name of the function
+must end with
+a "$" character, to differentiate it from the boolean function calls
+(eg ISPC above).</p>
       <p>After you've read the
 above documentation, there are still a
 few small details to be aware of before getting started. One is that
@@ -3652,7 +3674,7 @@ and fairly.</p>
       <p>Usage:</p>
       <pre>mpsetclan [target] [clan] [role]<br /></pre>
       <p>This command allows you to add or remove the target to/from
-the given clan. A role of -1 will remove the target from the clan.  A
+the given clan. A role of -1 will remove the target from the clan. A
 valid clan role will add them.</p>
       <p>EXAMPLES:</p>
       <pre>mpsetclan $i 'Groovy Clan' 0<br />
@@ -3666,7 +3688,8 @@ given clan based on the given variable. The clan code may be either a
 mob code to denote that mobs clan, or a clan name. Valid variables for
 setting are: ACCEPTANCE, DONATEROOM, EXP, GOVT, MORGUE, POLITICS,
 PREMISE, RECALL, STATUS, TAXES, TROPHIES, TYPE, AREAS, MEMBERLIST,
-TOPMEMBER, CLANLEVEL, CATEGORY, RIVALROUS,MINMEMBERS, CLANCHARCLASS, NAME </p>
+TOPMEMBER, CLANLEVEL, CATEGORY, RIVALROUS,MINMEMBERS, CLANCHARCLASS,
+NAME </p>
       <p>EXAMPLES:</p>
       <pre>mpsetclandata 'Groovy Clan' EXP 0<br />mpecho Groovy Clans experience is now gone!<br />mpset $n PREMISE my premise is new.<br />mpecho Whoever $n is, their clan now has a new premise!<br /></pre>
       <p>SPECIAL NOTES: Be very
@@ -4001,7 +4024,8 @@ includes a RETURN statement that includes a non-empty string parameter.</p>
       <pre>clan(character == clanname)<br /></pre>
       <p>This checks the name of
 the prominent rivalrous clan of the character variable.
-Where '==' may be ==, != to check the prominent clan, or "in" or "notin" to check membership in a clan.</p>
+Where '==' may be ==, != to check the prominent clan, or "in" or
+"notin" to check membership in a clan.</p>
       <p>EXAMPLE:</p>
       <pre>if clan($n in 'The Unholy Goobers')<br /> mpecho The actor triggering me appears to be an Unholy Goober.<br />else<br /> mpecho The actor triggering me appears not to be a Goober.<br />endif<br /></pre>
       <h3><a name="clandata">clandata</a></h3>
@@ -4013,7 +4037,8 @@ clan. The clan parameter may be either a mob to denote the mobs clan,
 or a clan name. Where variable should be one of the following
 ACCEPTANCE, DETAIL, DONATEROOM, EXP, GOVT, MORGUE, POLITICS, PREMISE,
 RECALL, SIZE, STATUS, TAXES, TROPHIES, TYPE, AREAS, MEMBERLIST,
-TOPMEMBER, CLANLEVEL, CATEGORY, RIVALROUS,MINMEMBERS, CLANCHARCLASS, NAME or
+TOPMEMBER, CLANLEVEL, CATEGORY, RIVALROUS,MINMEMBERS, CLANCHARCLASS,
+NAME or
 TOPMEMBER. Where '==' may be another logical operator from above. The
 value may be any numeric, string, or literal.</p>
       <p>EXAMPLE:</p>
@@ -4031,8 +4056,8 @@ BOSS=6</p>
       <h3><a name="clanqualifies">clanqualifies</a></h3>
       <p>Usage:</p>
       <pre>clanqualifies(character clanname)<br /></pre>
-      <p>This checks the given character to see if they qualify to be a new member
-      of the given clan.</p>
+      <p>This checks the given character to see if they qualify to be a
+new member of the given clan.</p>
       <p>EXAMPLE:</p>
       <pre>if clanqualifies($n 'MyClan')<br /> mpecho The actor triggering me appears qualify.<br />else<br /> mpecho The actor triggering me appears not to qualify.<br />endif<br /></pre>
       <h3><a name="class">class</a></h3>
@@ -4193,7 +4218,8 @@ from a local rooms name or description. The '==' may also be '!='.</p>
       <pre>incontainer(character container/mount)<br /></pre>
       <p>This checks whether the
 character is on the given mount, or,
-if the character is an item, whether the first item with the given name is in the first container of the given name.</p>
+if the character is an item, whether the first item with the given name
+is in the first container of the given name.</p>
       <p>EXAMPLES:</p>
       <pre>if incontainer($n a chair)<br /> mpecho The actor is sitting on a chair<br />else<br /> mpecho The actor is not sitting on a chair<br />endif<br /><br />if incontainer($p a sack)<br /> mpecho The item is in a sack.<br />else<br /> mpecho The item is not in a sack.<br />endif<br /></pre>
       <h3><a name="inlocale">inlocale</a></h3>
@@ -4267,7 +4293,8 @@ character variable is charmed.</p>
       <p>Usage:</p>
 iscontent(container itemname)<br />
       <p>This checks to see if the
-first container (or rideable) of the given name contains an item of the given name (or rider).</p>
+first container (or rideable) of the given name contains an item of the
+given name (or rider).</p>
       <p>EXAMPLE:</p>
       <span style="font-family: monospace;">if
 iscontent($o 'a dagger')</span><br style="font-family: monospace;" />
@@ -4276,8 +4303,8 @@ mpecho This means the container $o contains a dagger.</span><br
  style="font-family: monospace;" />
       <span style="font-family: monospace;">else</span><br
  style="font-family: monospace;" />
-      <span style="font-family: monospace;">
-&nbsp; mpecho The container $o is not a container, or does not
+      <span style="font-family: monospace;">&nbsp; mpecho The container
+$o is not a container, or does not
 contain a dagger.</span><br style="font-family: monospace;" />
       <span style="font-family: monospace;">endif</span>
       <h3><a name="isday">isday</a></h3>
@@ -4941,8 +4968,8 @@ wornon($n feet 'purple shoes')</span><br style="font-family: monospace;" />
  style="font-family: monospace;" />
       <span style="font-family: monospace;">else</span><br
  style="font-family: monospace;" />
-      <span style="font-family: monospace;">
-&nbsp; &nbsp;mpecho The actor is not wearing purple shoes on
+      <span style="font-family: monospace;">&nbsp; &nbsp;mpecho The
+actor is not wearing purple shoes on
 his feet.</span><br style="font-family: monospace;" />
       <span style="font-family: monospace;">endif</span>
       <pre><br /></pre>
